--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
     implementation 'com.getbase:floatingactionbutton:1.10.1'
+
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
 }
