--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     implementation 'com.getbase:floatingactionbutton:1.10.1'
 
     implementation 'com.google.android.material:material:1.3.0-alpha03'
+
+    implementation 'petrov.kristiyan:colorpicker-library:1.1.4'
 }
