--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+
+    //mapview
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -51,4 +54,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha03'
 
     implementation 'petrov.kristiyan:colorpicker-library:1.1.4'
+
+    //location
+    implementation 'gun0912.ted:tedpermission:2.2.2'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
 }
