--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BetaVersion">
+        android:theme="@style/Theme.BetaVersion"
+        android:requestLegacyExternalStorage="true">
         <activity
             android:name=".TasksDayListsActivity"
             android:exported="false" />
