--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    //implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
 
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
@@ -61,4 +61,9 @@ dependencies {
 
     //request permissions
     implementation 'pub.devrel:easypermissions:3.0.0'
+
+    //bitmap
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.13.0"
 }
