--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
@@ -73,10 +75,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCq4mu1gZ6DF0wtMgOrxgfOWq4Nr2mCQbo" />
 
-        <receiver android:name=".AlertReceiver" />
-
         <service android:name=".BackgroundService"/>
         <receiver android:name=".NotificationService"/>
+        <receiver android:name=".AlarmReceiver"/>
+
     </application>
 
 </manifest>
