--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,16 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- Always include this permission -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- Include only if your app benefits from precise location access. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
-    <uses-permission android:name="android.permission.SET_ALARM"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <!--
  Required only when requesting background location access on
        Android 10 (API level 29) and higher.
     -->
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -29,6 +27,9 @@
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.BetaVersion">
+        <activity
+            android:name=".HelpActivity"
+            android:exported="false" />
         <activity
             android:name=".PermissionsActivity"
             android:exported="false" />
@@ -79,18 +80,20 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCq4mu1gZ6DF0wtMgOrxgfOWq4Nr2mCQbo" />
 
-        <service android:name=".BackgroundService"/>
-        <receiver android:name=".NotificationService"/>
-        <receiver android:name=".AlarmReceiver"/>
-        <receiver android:name=".AlarmBootReceiver"
+        <service android:name=".BackgroundService" />
+
+        <receiver android:name=".NotificationService" />
+        <receiver android:name=".AlarmReceiver" />
+        <receiver
+            android:name=".AlarmBootReceiver"
             android:enabled="true">
             <intent-filter>
-                <action android:name="android.intent.action.REBOOT"></action>
-                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+                <action android:name="android.intent.action.REBOOT" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        <service android:name=".RestartAlarmsService"/>
 
+        <service android:name=".RestartAlarmsService" />
     </application>
 
 </manifest>
