--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,8 +92,9 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
         <service android:name=".RestartAlarmsService" />
+        <receiver android:name=".NotificationServiceDelete"/>
+
     </application>
 
 </manifest>
